# muloco-1

./: README.md  job.sh  muloco-1.md  muloco.py  muloco_jax.py  plan.md  pyproject.toml  run.sh  test_muloco.py  test_muloco_jax.py
docs/: _config.yml  index.html
examples/: job.sh  run.sh  train_lm.py
muloco/: __init__.py
muloco/jax/: __init__.py  muloco.py
muloco/pytorch/: __init__.py  muloco.py
tests/: test_jax.py
